--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -66,6 +66,41 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 
-.container{
+/* Top-heading */
+
+body{
+	width: 880px;
+  margin: 0 auto;
+}
+
+nav ul{
 	display: flex;
+	list-style: none;
+	padding: 0;
+	align-items: center;
+
+}
+
+
+nav ul li a{
+	color: grey;
+	text-decoration: none;
+	display: block;
+}
+
+
+.logo{
+display: block;
+}
+
+nav{
+	display: flex;
+	justify-content: space-evenly;
+	padding: 20px;
+}
+
+nav ul li a{
+	margin: 20px;
+	padding: 0 5px;
+
 }
