--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -88,6 +88,7 @@ nav ul li a{
 	color: grey;
 	text-decoration: none;
 	display: block;
+	width: 85px;
 }
 
 
@@ -99,8 +100,7 @@ nav{
 	display: flex;
 	justify-content: space-evenly;
 	padding: 20px;
-	width: 100%;
-	margin-left: 50px
+
 }
 
 nav ul li a{
@@ -108,6 +108,18 @@ nav ul li a{
 	padding: 0 5px;
 
 }
+
+
+/* Lower header */
+.main-top .top-1 {
+	margin-top: 20px;
+}
+
+.main-top h3{
+	font-size: 2em;
+}
+
+
 
 /* Main-Content */
 
@@ -118,46 +130,47 @@ nav ul li a{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	justify-content: space-between;
 	align-items: flex-start;
-
-
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	margin-top: 40px;
+	margin-bottom: 40px;
 }
 
-.main-content .content-1{
+.main-content div{
+	border: 2px solid black;
+	margin: 40px 0px;
 	width: 400px;
+	background-color: #edeeef;
+}
+
+.content-1{
+	width: 400px;
+	padding: 30px;
 
 }
 .content-2{
-	display: block;
 	width: 400px;
+	padding: 30px;
 
 }
 .content-3{
 	width: 400px;
-
+	padding: 30px;
 }
-/* .content-4{
-
-}
-.content-5{
-
-}
-.content-6{
-
-
-} */
 
 .main-content h3{
-
-}
-
-.main-content p{
+	font-size: 1em;
 
 }
 
 
 .main-content button{
-
+	margin-top: 20px;
+	padding: 10px 30px;
+	border: 1px solid black;
+	border-radius: 12px;
 }
 
 /* .main-content div{
@@ -169,4 +182,31 @@ nav ul li a{
 /* Bottom Content */
 .bottom-page{
 	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+
+.services-info{
+	width: 400px;
+}
+
+
+.bottom-page p{
+	margin-bottom: 20px;
+}
+
+.bottom-page ul{
+	list-style: square;
+	padding-left: 20px;
+}
+.bottom-page ul li{
+	padding-bottom: 15px;
+
+}
+
+footer{
+	margin-top: 70px;
+	text-align: center;
 }
