--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -65,10 +65,155 @@ h1, h2, h3, h4, h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
+/* CSS Styling for index.html */
+.container {
+  width: 880px;
+  /* TB LR */
+  margin: 0 auto;
+}
 
+.major-head a{
+	display: flex;
+	list-style: none;
+	padding: 0;
+	align-items: center;
+	color: grey;
+	text-decoration: none;
+	display: block;
+	width: 85px;
+}
+
+
+}
+
+
+/* nav ul li a{
+	color: grey;
+	text-decoration: none;
+	display: block;
+	width: 85px;
+} */
+
+.major-head a:hover{
+	text-decoration: underline;
+}
+
+.logo-1{
+display: block;
+}
+
+.major-head{
+	display: flex;
+	justify-content: space-evenly;
+	padding: 20px;
+
+}
+
+.major-head a{
+	margin: 20px;
+	padding: 0 5px;
+
+}
+
+.cta{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+.cta-text{
+	text-align: center;
+	font-size: 5em;
+}
+
+.cta-text button{
+	margin-top: 20px;
+	padding: 10px 30px;
+	border: 1px solid black;
+	width: 200px;
+
+}
+
+.first-content{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	border-top: 1px solid black;
+	margin-top: 60px;
+}
+
+.first-content .text-content{
+	margin: 40px 0px;
+	padding: 20px;
+
+}
+
+.text-content p{
+	font-size: 1em;
+}
+.middle-img{
+	margin-bottom: 40px;
+}
+
+.bottom-content{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	border-bottom: 1px solid black;
+}
+
+.bottom-content .bottom-text{
+	margin-bottom:40px;
+	padding: 20px;
+}
+
+.bottom-text p{
+	font-size: 1em;
+}
+
+
+.contact{
+	margin-top: 40px;
+}
+
+.contact h4{
+	padding-bottom: 2px;
+}
+
+.contact p:nth-child(2){
+	padding-top: 20px;
+}
+
+.contact p:nth-child(3){
+	padding-top: 20px;
+}
+
+
+
+footer{
+	text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS sytling for services.html */
 /* Top-heading */
-
-
 main{
 	width: 880px;
   margin: 0 auto;
@@ -91,6 +236,9 @@ nav ul li a{
 	width: 85px;
 }
 
+nav ul li a:hover{
+	text-decoration: underline;
+}
 
 .logo{
 display: block;
